Fix row layout in ListComponent and language stuff (#2595)
* fix radio button alignment causing row to look weird

* fix various language issues

* conditional description

--- a/src/layout/List/ListComponent.module.css
+++ b/src/layout/List/ListComponent.module.css
@@ -21,9 +21,8 @@
   height: 60px;
 }
 
-.listTable tr td:first-of-type {
-  display: flex;
-  align-items: center;
+.radio {
+  align-content: center;
   justify-content: center;
 }
 
